--- a/node/chat/package.json
+++ b/node/chat/package.json
@@ -54,6 +54,8 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "moment": "^2.8.4",
+    "morgan": "~1.0.0"
   }
 }
