--- a/node/baseNode/package.json
+++ b/node/baseNode/package.json
@@ -10,7 +10,8 @@
     "express-params": "0.0.3",
     "express-session": "^1.9.1",
     "jquery-file-upload-middleware": "^0.1.7",
-    "mysql": "^2.5.3"
+    "mysql": "^2.5.3",
+    "up":"~0.6.0"
   },
   "engines": {
     "node": ">=0.10.0"
