--- a/node/mysql/package.json
+++ b/node/mysql/package.json
@@ -6,6 +6,9 @@
     "mysql": "^2.5.3",
     "underscore": "^1.8.3",
     "moment": "^2.8.4",
+    "colors":"0.5.0",
+    "express":"3.0.4",
+    "jade":"1.8.2",
     "morgan": "~1.0.0"
   },
   "engines": {
