--- a/node/mysql/package.json
+++ b/node/mysql/package.json
@@ -9,6 +9,7 @@
     "colors":"0.5.0",
     "express":"3.0.4",
     "jade":"1.8.2",
+    //"sequelize":"1.3.7",
     "morgan": "~1.0.0"
   },
   "engines": {
