--- a/node/socialNet/package.json
+++ b/node/socialNet/package.json
@@ -10,6 +10,7 @@
     "mocha": "^2.2.5",
     "mongodb": "2.0.33",
     "mongoose": "^4.0.6",
+    "crypto":"0.0.3",
     "socket.io": "0.9.2"
   }
 }
