--- a/node/socialNet/package.json
+++ b/node/socialNet/package.json
@@ -11,6 +11,8 @@
     "mongodb": "2.0.33",
     "mongoose": "^4.0.6",
     "crypto":"0.0.3",
+    "nodemailer":"1.4.0",
+    "connect":"3.4.0",
     "socket.io": "0.9.2"
   }
 }
