--- a/node/seajs-grunt-build/package.json
+++ b/node/seajs-grunt-build/package.json
@@ -17,15 +17,14 @@
     "underscore": "^1.8.3",
     "moment": "^2.8.4",
     "morgan": "~1.0.0",
-    "gulp" : "*" ,
-    "gulp-uglify" : "*" ,
-    "gulp-rev-all" : "*" ,
-    "gulp-minify-css" : "*" ,
-    "gulp-htmlmin" : "*" ,
-    "gulp-concat" : "*" ,
-    "gulp-changed" : "*" ,
-    "del" : "*" ,
-    "gulp-seajs-transport":"*",
-    "gulp-seajs-combo":"*"
+    "grunt": "^0.4.4",
+    "grunt-cmd-concat": "^0.2.7",
+    "grunt-cmd-transport": "^0.4.1",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-copy":"^0.8.0"
   }
 }
