--- a/node/seajs-grunt-build/package.json
+++ b/node/seajs-grunt-build/package.json
@@ -3,16 +3,15 @@
   "version": "0.0.1",
   "private": "true",
   "devDependencies": {
+    "express": "~4.2.0",
+    "grunt-filerev": "^2.3.1",
     "jade": "1.8.2",
-    "socket.io": "1.3.2",
-    "express": "~4.2.0"
+    "socket.io": "1.3.2"
   },
   "engines": {
     "node": ">=0.10.0"
   },
-  "scripts": {
-
-  },
+  "scripts": {},
   "dependencies": {
     "underscore": "^1.8.3",
     "moment": "^2.8.4",
@@ -25,6 +24,7 @@
     "grunt-contrib-sass": "^0.7.3",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-copy":"^0.8.0"
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-usemin": "3.0.0"
   }
 }
