--- a/node/seajs-grunt-build/package.json
+++ b/node/seajs-grunt-build/package.json
@@ -4,7 +4,10 @@
   "private": "true",
   "devDependencies": {
     "express": "~4.2.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-imagemin": "^0.9.4",
     "grunt-filerev": "^2.3.1",
+    "grunt-rev-all": "0.1.1",
     "jade": "1.8.2",
     "socket.io": "1.3.2"
   },
