--- a/node/gulp-md5-signle-page/package.json
+++ b/node/gulp-md5-signle-page/package.json
@@ -8,7 +8,8 @@
     "express": "~4.2.0",
     "gulp" : "*" ,
     "gulp-uglify" : "*" ,
-    "gulp-rev-all" : "*" ,
+    "gulp-rev" : "*" ,
+    "gulp-rev-replace" : "*" ,
     "gulp-minify-css" : "*" ,
     "gulp-htmlmin" : "*" ,
     "gulp-concat" : "*" ,
