--- a/node/seajs-grunt-build/package.json
+++ b/node/seajs-grunt-build/package.json
@@ -4,6 +4,16 @@
   "private": "true",
   "devDependencies": {
     "express": "~4.2.0",
+    "grunt": "^0.4.4",
+    "grunt-cmd-concat": "^0.2.7",
+    "grunt-cmd-transport": "^0.4.1",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-sass": "^0.7.3",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-usemin": "3.0.0",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-filerev": "^2.3.1",
@@ -18,16 +28,6 @@
   "dependencies": {
     "underscore": "^1.8.3",
     "moment": "^2.8.4",
-    "morgan": "~1.0.0",
-    "grunt": "^0.4.4",
-    "grunt-cmd-concat": "^0.2.7",
-    "grunt-cmd-transport": "^0.4.1",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-sass": "^0.7.3",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-usemin": "3.0.0"
+    "morgan": "~1.0.0"
   }
 }
