--- a/node/socialNet/package.json
+++ b/node/socialNet/package.json
@@ -13,6 +13,7 @@
     "crypto":"0.0.3",
     "nodemailer":"1.4.0",
     "connect":"3.4.0",
-    "socket.io": "0.9.2"
+    "socket.io": "0.9.2",
+    "cookie":"*"
   }
 }
