--- a/HTML5/package.json
+++ b/HTML5/package.json
@@ -6,7 +6,9 @@
     "colors":"0.5.0",
     "express":"3.0.4",
     "jade":"1.8.2",
+    "ejs":"*",
     "socket.io":"0.9.2",
-    "websocket.io":"0.2.1"
+    "websocket.io":"0.2.1",
+    "underscore":"*"
   }
 }
