--- a/node/express/package.json
+++ b/node/express/package.json
@@ -7,6 +7,7 @@
     "express":"3.0.4",
     "jade":"1.8.2",
     "socket.io":"0.9.2",
-    "websocket.io":"0.2.1"
+    "websocket.io":"0.2.1",
+    "log4js":"*"
   }
 }
