--- a/node/mongoose/package.json
+++ b/node/mongoose/package.json
@@ -7,6 +7,7 @@
     "express": "3.0.4",
     "express-mongoose": "^0.1.0",
     "jade": "1.8.2",
+    "ejs":"*",
     "mocha": "^2.2.5",
     "mongodb": "2.0.33",
     "mongoose": "^4.0.6",
