--- a/node/express/package.json
+++ b/node/express/package.json
@@ -8,6 +8,9 @@
     "jade":"1.8.2",
     "socket.io":"0.9.2",
     "websocket.io":"0.2.1",
-    "log4js":"*"
+    "log4js":"*",
+    "ejs":"*",
+    "jsdom":"*",
+    "jQuery":"*"
   }
 }
