add first java project

--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -20,6 +20,8 @@
     "log4js":"*",
     "request":"*",
     "formidable":"*",
-    "mongoose":"*"
+    "mongoose":"*",
+    "redis":"*",
+    "bcrypt":"*"
   }
 }
