--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -22,6 +22,7 @@
     "formidable":"*",
     "mongoose":"*",
     "redis":"*",
-    "bcrypt":"*"
+    "bcrypt":"*",
+    "express-session":"*"
   }
 }
