--- a/node/logipCount/package.json
+++ b/node/logipCount/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
-    "socket.io":"0.9.2",
-    "tail":"*",
+    "commander":"*",
     "redis":"*",
     "mysql": "^2.5.3",
     "underscore":"*"
