--- a/node/logipCount/package.json
+++ b/node/logipCount/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": "true",
   "dependencies": {
-    "commander":"*",
-    "redis":"*",
+    "async": "^1.4.2",
+    "commander": "^2.8.1",
     "mysql": "^2.5.3",
-    "underscore":"*"
+    "redis": "^1.0.0",
+    "underscore": "^1.8.3"
   }
 }
