--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -6,24 +6,25 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "basic-auth": "^1.0.3",
+    "bcrypt": "*",
     "body-parser": "~1.13.2",
+    "colors": "0.5.0",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "*",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "formidable": "*",
+    "jade": "1.8.2",
+    "log4js": "*",
+    "mongoose": "*",
     "morgan": "~1.6.1",
+    "redis": "*",
+    "request": "*",
     "serve-favicon": "~2.3.0",
-    "colors":"0.5.0",
-    "jade":"1.8.2",
-    "socket.io":"0.9.2",
-    "websocket.io":"0.2.1",
-    "log4js":"*",
-    "request":"*",
-    "formidable":"*",
-    "mongoose":"*",
-    "redis":"*",
-    "bcrypt":"*",
-    "underscore":"*",
-    "cookie-session":"*"
+    "socket.io": "0.9.2",
+    "underscore": "*",
+    "websocket.io": "0.2.1"
   }
 }
