--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "assert": "^1.3.0",
     "basic-auth": "^1.0.3",
     "bcrypt": "*",
     "body-parser": "~1.13.2",
