--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -24,7 +24,9 @@
     "redis": "*",
     "request": "*",
     "serve-favicon": "~2.3.0",
+    "should": "^7.1.0",
     "socket.io": "0.9.2",
+    "tobi": "^0.3.2",
     "underscore": "*",
     "websocket.io": "0.2.1"
   }
