update spring pro

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,23 @@ js/angular-requirejs-seed/app/bower_components
 java/.DS_Store
 js/.DS_Store
 .DS_Store
+target
+
+.project
+.classpath
+target
+*/target
+.settings
+
+*.svn*
+.svn
+*.iml
+.idea
+bak
+*.log
+
+node_modules
+.build
+.minify
+
+.DS_Store
