--- a/node/require-gulp-build/package.json
+++ b/node/require-gulp-build/package.json
@@ -13,10 +13,10 @@
     "gulp-copy": "0.0.2",
     "gulp-csslint": "^0.3.0",
     "gulp-header": "^1.7.1",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-karma": "0.0.5",
-    "gulp-minify-html": "^1.0.6",
     "gulp-requirejs-optimize": "^0.3.2",
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
@@ -27,6 +27,7 @@
     "jade": "1.8.2",
     "jshint": "^2.9.1",
     "karma": "^0.13.22",
+    "node-sass": "^3.4.2",
     "requirejs": "^2.2.0",
     "socket.io": "1.3.2"
   },
