--- a/node/require-gulp-build/package.json
+++ b/node/require-gulp-build/package.json
@@ -29,6 +29,7 @@
     "karma": "^0.13.22",
     "node-sass": "^3.4.2",
     "requirejs": "^2.2.0",
+    "run-sequence": "^1.1.5",
     "socket.io": "1.3.2"
   },
   "engines": {
@@ -38,8 +39,9 @@
     "start": "node app/app.js"
   },
   "dependencies": {
-    "underscore": "^1.8.3",
+    "gulp-rev-collector": "^1.0.3",
     "moment": "^2.8.4",
-    "morgan": "~1.0.0"
+    "morgan": "~1.0.0",
+    "underscore": "^1.8.3"
   }
 }
