--- a/node/require-gulp-build/package.json
+++ b/node/require-gulp-build/package.json
@@ -21,6 +21,7 @@
     "gulp-rev": "^7.0.0",
     "gulp-rev-replace": "^0.4.3",
     "gulp-sass": "^2.2.0",
+    "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.0",
     "gulp-uglify": "^1.5.3",
@@ -29,7 +30,6 @@
     "karma": "^0.13.22",
     "node-sass": "^3.4.2",
     "requirejs": "^2.2.0",
-    "run-sequence": "^1.1.5",
     "socket.io": "1.3.2"
   },
   "engines": {
