--- a/node/require-gulp-build/package.json
+++ b/node/require-gulp-build/package.json
@@ -12,6 +12,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-copy": "0.0.2",
     "gulp-csslint": "^0.3.0",
+    "gulp-filter": "^4.0.0",
     "gulp-header": "^1.7.1",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
@@ -39,7 +40,6 @@
     "start": "node app/app.js"
   },
   "dependencies": {
-    "gulp-rev-collector": "^1.0.3",
     "moment": "^2.8.4",
     "morgan": "~1.0.0",
     "underscore": "^1.8.3"
