--- a/node/express-standard/package.json
+++ b/node/express-standard/package.json
@@ -27,5 +27,9 @@
     "tobi": "^0.3.2",
     "underscore": "^1.8.3",
     "websocket.io": "^0.2.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^3.8.1"
   }
 }
