--- a/webpackConfig/package.json
+++ b/webpackConfig/package.json
@@ -16,6 +16,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "extract-text-webpack-plugin": "^1.0.1",
     "glob": "^7.0.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.21.0"
